redesignedoj/files_usersubmissions/10/submission.txt
7_BUILDROADS_code.cpp: In function ‘int main()’:
7_BUILDROADS_code.cpp:5:11: error: expected ‘;’ before ‘}’ token
    5 |   return 0
      |           ^
      |           ;
    6 | }
      | ~          
